# GRUpdater

./: .gitignore  CMakeLists.txt  LICENSE  README.md  infodll.rc  infoexe.rc  main.cpp  updater.cpp  updater.hpp
